--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # just a flag
 ENV = 'development'
 
-VUE_APP_BASE_API = 'http://localhost:8080/'
+VUE_APP_BASE_API = ''
 
 VUE_APP_TYPE = 'localhost'
 
