--- a/.env.production
+++ b/.env.production
@@ -3,4 +3,4 @@ ENV = 'production'
 
 VUE_APP_TYPE = 'build'
 
-VUE_APP_BASE_API = 'http://localhost:3001'
+VUE_APP_BASE_API = 'http://106.53.214.144:3001/'
